plugins {
    id 'java'
    id 'application'
    id 'jacoco'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.jetuml'
version = '1.0.0'

repositories { mavenCentral() }

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

application {
    mainClass = 'ca.prmr.JetUML.JetUML'
}

test {
    useJUnitPlatform()
    testLogging { events "passed", "skipped", "failed" }
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
            exclude 'test/**'
        }
        resources {
            srcDirs = ['src']
            exclude 'test/**'
        }
    }
    test {
        java.srcDirs = ['src/test/java']
        resources.srcDirs = ['src/test/resources']
    }
}

javafx {
    version = '17.0.9'
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.swing']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    testImplementation 'junit:junit:4.13.2'
}

jacocoTestReport {
    dependsOn test
    reports { xml.required.set(true); html.required.set(true) }
}
